@@ -1,3 +1,9 @@
+Mon Dec  9 08:40:40 2013  Eric Hodel  <drbrain@segment7.net>
+
+	* lib/rubygems:  Update to RubyGems master bf37240.  Fixes useless
+	  error message with `gem install -g` with no gem dependencies file.
+	* test/rubygems:  ditto.
+
 Mon Dec  9 04:52:25 2013  Eric Hodel  <drbrain@segment7.net>
 
 	* NEWS:  Update RubyGems entry with notable features.
